[package]
name = "mountain_protocol_api_tester"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
tungstenite = "0.15"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
native-tls = "0.2"
hmac = "0.10"
sha2 = "0.9"
base64 = "0.13"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
websocket="0.27.0"
tokio-stream = "0.1"
futures = "0.3"
async-tungstenite = "0.14"